--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@dnd-kit/core": "^6.1.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.18",
     "@mui/icons-material": "^5.15.15",
+    "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
     "jsonwebtoken": "^9.0.2",
