--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "react": "^18",
