--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@mui/joy": "^5.0.0-beta.36",
     "@mui/material": "^5.15.15",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.3",
     "formik": "^2.4.6",
     "jsonwebtoken": "^9.0.2",
     "next": "14.1.4",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18"
   }
